[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3,<4"]

[tool.black]
line-length = 119
target-version = ["py38"]

[tool.flit.metadata]
author = "Filip Cvetko"
author-email = "filipcvetko123@gmail.com"
module = "src"
requires = [
    "matplotlib==3.4.3",
    "scikit-learn==1.0.1",
]

[tool.flit.metadata.requires-extra]
test = [
    "black",
    "flake8",
    "isort",
    "tox",
]

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 119
multi_line_output = 3
use_parentheses = true